# dream_yara

./: .gitmodules
src/: CMakeLists.txt  d_mapper.h
test/: CMakeLists.txt
test/benchmark/: 01_simulate_genome.cmake  02_generate_reads.cmake  03_build_dream_yara_filter.cmake  04_build_dream_yara_fm_indices.cmake  CMakeLists.txt  generate_reads.cpp  padded_number.cmake
test/benchmark/util/: add_benchmark_csv_entry.py  execute_dream_yara_mapper_benchmark_and_add_csv_entry.sh  parse_time_log.py  parse_yara_mapper_log.py  yara_mapper.example.time
test/cmake/: require_mason.cmake
test/data/benchmark1/: 19_1G.filter.sha256  genome_split.sha256  reads_e2_100.sha256  reference.fasta.sha256
test/data/benchmark1/bins/: bin_000.fasta.sha256  bin_001.fasta.sha256  bin_002.fasta.sha256  bin_003.fasta.sha256  bin_004.fasta.sha256  bin_005.fasta.sha256  bin_006.fasta.sha256  bin_007.fasta.sha256  bin_008.fasta.sha256  bin_009.fasta.sha256  bin_010.fasta.sha256  bin_011.fasta.sha256  bin_012.fasta.sha256  bin_013.fasta.sha256  bin_014.fasta.sha256  bin_015.fasta.sha256  bin_016.fasta.sha256  bin_017.fasta.sha256  bin_018.fasta.sha256  bin_019.fasta.sha256  bin_020.fasta.sha256  bin_021.fasta.sha256  bin_022.fasta.sha256  bin_023.fasta.sha256  bin_024.fasta.sha256  bin_025.fasta.sha256  bin_026.fasta.sha256  bin_027.fasta.sha256  bin_028.fasta.sha256  bin_029.fasta.sha256  bin_030.fasta.sha256  bin_031.fasta.sha256  bin_032.fasta.sha256  bin_033.fasta.sha256  bin_034.fasta.sha256  bin_035.fasta.sha256  bin_036.fasta.sha256  bin_037.fasta.sha256  bin_038.fasta.sha256  bin_039.fasta.sha256  (+88 more)
test/data/benchmark1/fm-indices/: fm_indices000.sha256  fm_indices001.sha256  fm_indices002.sha256  fm_indices003.sha256  fm_indices004.sha256  fm_indices005.sha256  fm_indices006.sha256  fm_indices007.sha256  fm_indices008.sha256  fm_indices009.sha256  fm_indices010.sha256  fm_indices011.sha256  fm_indices012.sha256  fm_indices013.sha256  fm_indices014.sha256  fm_indices015.sha256  fm_indices016.sha256  fm_indices017.sha256  fm_indices018.sha256  fm_indices019.sha256  fm_indices020.sha256  fm_indices021.sha256  fm_indices022.sha256  fm_indices023.sha256  fm_indices024.sha256  fm_indices025.sha256  fm_indices026.sha256  fm_indices027.sha256  fm_indices028.sha256  fm_indices029.sha256  fm_indices030.sha256  fm_indices031.sha256  fm_indices032.sha256  fm_indices033.sha256  fm_indices034.sha256  fm_indices035.sha256  fm_indices036.sha256  fm_indices037.sha256  fm_indices038.sha256  fm_indices039.sha256  (+88 more)
test/data/benchmark1/info/: bin_000.vcf.sha256  bin_001.vcf.sha256  bin_002.vcf.sha256  bin_003.vcf.sha256  bin_004.vcf.sha256  bin_005.vcf.sha256  bin_006.vcf.sha256  bin_007.vcf.sha256  bin_008.vcf.sha256  bin_009.vcf.sha256  bin_010.vcf.sha256  (+117 more)
(+6 files in other folders)
